--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -38,6 +38,10 @@ body,input,textarea,button {
 h1,h2,h3,h4,h5,h6,strong {
   font-weight: 600;
 }
+.headerTitle {
+  font-size:2rem;
+  color: gray;
+}
 .page {
   display: flex;
   flex-direction: column;
